--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -2,6 +2,11 @@
   <div class="space" fxFlex="2 2 auto">&nbsp;</div>
   <div class="content" fxLayout="row wrap" fxLayoutAlign="center center">
     <h1 class="mat-h1" fxLayout="row" fxLayoutAlign="start center" fxFlex="0 0 80vw">#2 Meetup Mobile BR</h1>
+    <div fxLayout="row" fxLayoutAlign="start center" fxFlex="0 0 80vw">
+      <svg height="50" width="50">
+        <line x1="0" y1="10" x2="50" y2="10" style="stroke:rgba(255, 255, 255, 0.87);stroke-width:5"></line>
+      </svg>
+    </div>
     <h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start center" fxFlex="0 0 80vw">CSS Flex Layout em Angular</h4>
   </div>
   <div class="space" fxFlex="4 4 auto">&nbsp;</div>
