--- a/src/app/lessons/01-flexbox/flexbox/flexbox.component.html
+++ b/src/app/lessons/01-flexbox/flexbox/flexbox.component.html
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="right" fxLayout="column" fxLayoutAlign="start center">
+			<div class="right" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="16px">
 				<div class="content" fxLayout="row" fxLayoutAlign="center">
 					<img src="https://css-tricks.com/wp-content/uploads/2018/10/02-items.svg" alt="" fxFlex="1 1 300px">
 				</div>
@@ -88,6 +88,65 @@
 						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
 						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
 					</svg>
+				</div>
+				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+					order
+				</h4>
+				<div class="content" fxLayout="column" fxLayoutAlign="center">
+					<img src="https://css-tricks.com/wp-content/uploads/2018/10/order.svg" alt="" fxFlex="1 1 300px">
+				</div>
+				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code class="accent">fxFlexOrder</code>
+					</div>
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code>integer</code>
+					</div>
+				</div>
+				<div fxLayout="row" fxLayoutAlign="center">
+					<svg height="22" width="110">
+						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					</svg>
+				</div>
+				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+					flex-grow, flex-shrink, flex-basis
+				</h4>
+				<div class="content" fxLayout="row" fxLayoutAlign="center">
+					<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-grow.svg" alt="" fxFlex="1 1 300px">
+				</div>
+				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code class="accent">fxFlex</code>
+					</div>
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code>&lt;flex-grow&gt; &lt;flex-shrink&gt; &lt;flex-basis&gt;</code>
+					</div>
+				</div>
+				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code>"" | px | % | vw | vh</code>
+					</div>
+				</div>
+				<div fxLayout="row" fxLayoutAlign="center">
+					<svg height="22" width="110">
+						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					</svg>
+				</div>
+				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+					align-self
+				</h4>
+				<div class="content" fxLayout="row" fxLayoutAlign="center">
+					<img src="https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg" alt="" fxFlex="1 1 300px">
+				</div>
+				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code class="accent">fxFlexAlign</code>
+					</div>
+					<div fxLayout="column" fxLayoutAlign="center center">
+						<code>start | baseline | center | end</code>
+					</div>
 				</div>
 			</div>
 		</div>
