Angular Layout - Static API

--- a/src/app/containers/layout/layout.component.html
+++ b/src/app/containers/layout/layout.component.html
@@ -9,6 +9,10 @@
         <mat-icon mat-list-icon>dashboard</mat-icon>
         Flexbox
       </mat-list-item>
+      <mat-list-item routerLink="/layout/angular">
+        <mat-icon mat-list-icon>code</mat-icon>
+        @angular/flex-layout
+      </mat-list-item>
     </mat-list>
   </mat-sidenav>
   <mat-sidenav-content fxLayout="column" fxLayoutAlign="start stretch">
