--- a/src/app/lessons/01-flexbox/flexbox/flexbox.component.html
+++ b/src/app/lessons/01-flexbox/flexbox/flexbox.component.html
@@ -1,152 +1,152 @@
 <div class="container" fxLayout="column" fxLayoutAlign="space-between stretch" fxFlex="1 1">
 	<div fxFlex="0 0 20px"></div>
-	<div class="title" fxLayout="column" fxLayoutAlign="start stretch" fxFlex="1 1 auto">
+	<div class="title" fxLayout="column" fxLayoutAlign="start stretch">
 		<h1 class="mat-h1" fxLayout="row" fxLayoutAlign="center">Flexbox - Basics & Terminology</h1>
-		<div class="content" fxLayout="row wrap" fxLayoutAlign="space-around">
-			<div class="left" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="16px">
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/01-container.svg" alt="" fxFlex="1 1 300px">
+	</div>
+	<div class="content" fxLayout="row wrap" fxLayoutAlign="space-around"  fxFlex="1 1 auto">
+		<div class="left" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="16px">
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/01-container.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="center">
+				Properties for the Parent<br>(flex container)
+			</h4>
+			<div fxLayout="row" fxLayoutAlign="center">
+				<svg height="22" width="110">
+					<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+				</svg>
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				flex-direction
+			</h4>
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-direction.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				flex-wrap
+			</h4>
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-wrap.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code class="accent">fxLayout</code>
 				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="center">
-					Properties for the Parent<br>(flex container)
-				</h4>
-				<div fxLayout="row" fxLayoutAlign="center">
-					<svg height="22" width="110">
-						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-					</svg>
-				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					flex-direction
-				</h4>
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-direction.svg" alt="" fxFlex="1 1 300px">
-				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					flex-wrap
-				</h4>
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-wrap.svg" alt="" fxFlex="1 1 300px">
-				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code class="accent">fxLayout</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>&lt;direction&gt; [wrap]</code>
-					</div>
-				</div>
-				<div fxLayout="row" fxLayoutAlign="center center">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>row | column | row-reverse | column-reverse</code>
-					</div>
-				</div>
-				<div fxLayout="row" fxLayoutAlign="center">
-					<svg height="22" width="110">
-						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-					</svg>
-				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					justify-content
-				</h4>
-				<div class="content" fxLayout="column" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/justify-content.svg" alt="" fxFlex="1 1 450px">
-				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					align-items
-				</h4>
-				<div class="content" fxLayout="column" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/align-items.svg" alt="" fxFlex="1 1 350px">
-				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code class="accent">fxLayoutAlign</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>&lt;main-axis&gt; &lt;cross-axis&gt;</code>
-					</div>
-				</div>
-				<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>start | center | end | space-around | space-between | space-evenly</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>start | center | end | stretch | space-between | space-around | baseline</code>
-					</div>
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>&lt;direction&gt; [wrap]</code>
 				</div>
 			</div>
-			<div class="right" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="16px">
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/02-items.svg" alt="" fxFlex="1 1 300px">
+			<div fxLayout="row" fxLayoutAlign="center center">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>row | column | row-reverse | column-reverse</code>
 				</div>
-				<h4 class="mat-h4">
-					Properties for the Children<br>(flex items)
-				</h4>
-				<div fxLayout="row" fxLayoutAlign="center">
-					<svg height="22" width="110">
-						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-					</svg>
+			</div>
+			<div fxLayout="row" fxLayoutAlign="center">
+				<svg height="22" width="110">
+					<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+				</svg>
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				justify-content
+			</h4>
+			<div class="content" fxLayout="column" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/justify-content.svg" alt="" fxFlex="1 1 450px">
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				align-items
+			</h4>
+			<div class="content" fxLayout="column" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/align-items.svg" alt="" fxFlex="1 1 350px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code class="accent">fxLayoutAlign</code>
 				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					order
-				</h4>
-				<div class="content" fxLayout="column" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/order.svg" alt="" fxFlex="1 1 300px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>&lt;main-axis&gt; &lt;cross-axis&gt;</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code class="accent">fxFlexOrder</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>integer</code>
-					</div>
+			</div>
+			<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>start | center | end | space-around | space-between | space-evenly</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="center">
-					<svg height="22" width="110">
-						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-					</svg>
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>start | center | end | stretch | space-between | space-around | baseline</code>
 				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					flex-grow, flex-shrink, flex-basis
-				</h4>
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-grow.svg" alt="" fxFlex="1 1 300px">
+			</div>
+		</div>
+		<div class="right" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="16px">
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/02-items.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<h4 class="mat-h4">
+				Properties for the Children<br>(flex items)
+			</h4>
+			<div fxLayout="row" fxLayoutAlign="center">
+				<svg height="22" width="110">
+					<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+				</svg>
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				order
+			</h4>
+			<div class="content" fxLayout="column" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/order.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code class="accent">fxFlexOrder</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code class="accent">fxFlex</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>&lt;flex-grow&gt; &lt;flex-shrink&gt; &lt;flex-basis&gt;</code>
-					</div>
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>integer</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>"" | px | % | vw | vh</code>
-					</div>
+			</div>
+			<div fxLayout="row" fxLayoutAlign="center">
+				<svg height="22" width="110">
+					<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+				</svg>
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				flex-grow, flex-shrink, flex-basis
+			</h4>
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/flex-grow.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code class="accent">fxFlex</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="center">
-					<svg height="22" width="110">
-						<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-						<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
-					</svg>
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>&lt;flex-grow&gt; &lt;flex-shrink&gt; &lt;flex-basis&gt;</code>
 				</div>
-				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
-					align-self
-				</h4>
-				<div class="content" fxLayout="row" fxLayoutAlign="center">
-					<img src="https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>"" | px | % | vw | vh</code>
 				</div>
-				<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code class="accent">fxFlexAlign</code>
-					</div>
-					<div fxLayout="column" fxLayoutAlign="center center">
-						<code>start | baseline | center | end</code>
-					</div>
+			</div>
+			<div fxLayout="row" fxLayoutAlign="center">
+				<svg height="22" width="110">
+					<line x1="0" y1="5" x2="50" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+					<line x1="60" y1="5" x2="110" y2="5" style="stroke:rgba(255, 255, 255, 0.12);stroke-width:2"></line>
+				</svg>
+			</div>
+			<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
+				align-self
+			</h4>
+			<div class="content" fxLayout="row" fxLayoutAlign="center">
+				<img src="https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg" alt="" fxFlex="1 1 300px">
+			</div>
+			<div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="4px">
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code class="accent">fxFlexAlign</code>
+				</div>
+				<div fxLayout="column" fxLayoutAlign="center center">
+					<code>start | baseline | center | end</code>
 				</div>
 			</div>
 		</div>
