--- a/src/app/lessons/02-angular/angular/angular.component.html
+++ b/src/app/lessons/02-angular/angular/angular.component.html
@@ -29,7 +29,7 @@
 					<code>fxLayout</code> <code>fxLayoutAlign</code> <code>fxFlex</code> <code>fxFlexOrder</code> <code>fxFlexAlign</code>
 				</div>
 				<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="4px">
-					<code>fxLayoutGap</code> <code>fxFlexOffset</code> <code>fxFlexFill</code> <code>fxHide</code> <code>fxShow</code>
+					<code>fxLayoutGap</code> <code>fxFlexOffset</code> <code>fxFlexFill</code> <code>fxShow</code> <code>fxHide</code>
 				</div>
 			</div>
 		</div>
