--- a/src/app/containers/layout/layout.component.html
+++ b/src/app/containers/layout/layout.component.html
@@ -13,6 +13,14 @@
         <mat-icon mat-list-icon>code</mat-icon>
         @angular/flex-layout
       </mat-list-item>
+      <mat-list-item routerLink="/layout/responsive">
+        <mat-icon mat-list-icon>devices_other</mat-icon>
+        Responsive
+      </mat-list-item>
+      <mat-list-item routerLink="/layout/playground">
+        <mat-icon mat-list-icon>play_arrow</mat-icon>
+        Playground
+      </mat-list-item>
     </mat-list>
   </mat-sidenav>
   <mat-sidenav-content fxLayout="column" fxLayoutAlign="start stretch">
