--- a/src/app/lessons/02-angular/angular/angular.component.html
+++ b/src/app/lessons/02-angular/angular/angular.component.html
@@ -3,8 +3,8 @@
 	<div class="title" fxLayout="column" fxLayoutAlign="start stretch">
 		<h1 class="mat-h1" fxLayout="row" fxLayoutAlign="center">Angular Flex Layout</h1>
 	</div>
-	<div class="content" fxLayout="row wrap" fxLayoutAlign="start stretch" fxFlex="1 1 auto">
-		<div fxLayout="column" fxLayoutAlign="start stretch" fxFlexOffset="10vw" fxLayoutGap="16px">
+	<div class="content" fxLayout="column" fxLayoutAlign="space-between stretch" fxFlex="1 1 auto" fxLayoutGap="16px">
+		<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="16px">
 			<div fxLayout="column" fxLayoutAlign="start start">
 				<h4 class="mat-h4" fxLayout="row" fxLayoutAlign="start">
 					How to Install
@@ -33,7 +33,9 @@
 				</div>
 			</div>
 		</div>
-
+		<div fxLayout="row"  fxLayoutAlign="start start">
+			<img src="assets/angular-flex-sample.png" alt="" fxFlex="100%">
+		</div>
 	</div>
 	<div class="source" fxLayout="row" fxLayoutAlign="end center" fxFlex="0 0 26px">
 		source: https://github.com/angular/flex-layout/wiki&nbsp;
