--- a/src/app/lessons/04-playground/playground/playground.component.scss
+++ b/src/app/lessons/04-playground/playground/playground.component.scss
@@ -1,6 +1,6 @@
 :host {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	place-content: center center;
 	flex: 1 1 auto;
 	background-color: rgba(0,0,0,.4);
