--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,12 @@ code {
 	}
 }
 
+p {
+	span.accent {
+		color: mat-color($accent);
+	}
+}
+
 div.a {
 	background-color: mat-color($primary, 100);
 }
